header section done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <body>
     <!-- header start -->
     <header>
-
+        <div class="container banner">
+            <div class="banner-content">
+                <h3>Happy New Year</h3>
+                <h1>New Year Party Celebration</h1>
+            </div>
+        </div>
     </header>
     <!-- header end -->
     <!-- main start -->
