categories section completed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
     <!-- header end -->
     <!-- main start -->
     <main>
-
+        <section class="categories">
+            <div class="container">
+                <div class="categories-content">
+                    <h1 class="red">65% OFF</h1>
+                    <h5 class="red">OUR HOLIDAY DEALS ARE BETTER</h5>
+                    <h2>ALL CATEGORIES</h2>
+                    <img src="./assets/new-year-photo.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            
+        </section>
     </main>
     <!-- main end -->
     <!-- footer start -->
