best deals section completed

--- a/index.html
+++ b/index.html
@@ -26,15 +26,62 @@
             <div class="container">
                 <div class="categories-content">
                     <h1 class="red">65% OFF</h1>
-                    <h5 class="red">OUR HOLIDAY DEALS ARE BETTER</h5>
+                    <h5 class="red section-sub-title">OUR HOLIDAY DEALS ARE BETTER</h5>
                     <h2>ALL CATEGORIES</h2>
                     <img src="./assets/new-year-photo.png" alt="">
                 </div>
             </div>
         </section>
+        <!-- midnight party section start -->
         <section>
-            
+            <div class="container midnight-party">
+                <div class="midnight-party-content">
+                    <h1>Welcome to midnight party</h1>
+                    <p class="section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+                    <button class="white-btn">Join Now</button>
+                </div>
+                <div class="midnight-party-image">
+                    <img src="./assets/2024-image.png" alt="">
+                </div>
+            </div>
         </section>
+        <!-- midnight party section end -->
+        <!-- Destination section start -->
+        <section>
+            <div class="container destination">
+                <div class="destination-content">
+                    <h2><span class="red">Place: </span>New Park Hotel</h2>
+                    <h2><span class="red">Date: </span>31 December Night 2023</h2>
+                    <h2><span class="red">Time: </span>Evening 7.30 pm to 12.30 am</h2>
+                    <button class="red-btn">Join Now</button>
+                </div>
+            </div>
+        </section>
+        <!-- Destination section end -->
+        <!-- best deals and offer section start -->
+        <section>
+            <div class="container best-deals">
+                <div class="coming-soon">
+                    <h5 class="red section-sub-title">NEW BEST OFFER</h5>
+                    <h2 class="section-title">Coming Soon</h2>
+                    <p class="section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="best-deals-image">
+                    <img src="./assets/Ellipse 1.png" alt="">
+                </div>
+                <div class="coming-soon-another">
+                    <h2 class="section-title">
+                        <span class="red">2024</span>
+                    </h2>
+                    <p class="section-description">
+                        Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+                    </p>
+                    <img src="./assets/Group 96.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- best offer and deals section end -->
     </main>
     <!-- main end -->
     <!-- footer start -->
