section heading created and styled

--- a/index.html
+++ b/index.html
@@ -82,6 +82,20 @@
             </div>
         </section>
         <!-- best offer and deals section end -->
+        <!-- Holidays Sale section start -->
+         <section>
+            <div class="container">
+                <div class="section-heading">
+                    <h5 class="section-sub-title">WHAT IS FUNCTIONAL</h5>
+                    <h1 class="section-title">
+                        <span class="red">Holidays</span> Sale 50%
+                    </h1>
+                    <p class="section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+                </div>
+            </div>
+         </section>
+        <!-- Holidays Sale section end -->
     </main>
     <!-- main end -->
     <!-- footer start -->
