holidays sales section completed

--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
                     <p class="section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
                         molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
                 </div>
+                <div class="images-container">
+                    <div class="left-image-container">
+                        <img src="./assets/group-75.png" alt="">
+                    </div>
+                    <div class="right-image-container">
+                        <img src="./assets/Group 44.png" alt="">
+                        <img src="./assets/Rectangle 1.png" alt="">
+                    </div>
+                </div>
             </div>
          </section>
         <!-- Holidays Sale section end -->
