--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 <div class="coming-soon">
                     <h5 class="red section-sub-title">NEW BEST OFFER</h5>
                     <h2 class="section-title">Coming Soon</h2>
-                    <p class="section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <p class="section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 </div>
                 <div class="best-deals-image">
                     <img src="./assets/Ellipse 1.png" alt="">
@@ -83,15 +84,16 @@
         </section>
         <!-- best offer and deals section end -->
         <!-- Holidays Sale section start -->
-         <section>
+        <section>
             <div class="container">
                 <div class="section-heading">
                     <h5 class="section-sub-title">WHAT IS FUNCTIONAL</h5>
                     <h1 class="section-title">
                         <span class="red">Holidays</span> Sale 50%
                     </h1>
-                    <p class="section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
-                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+                    <p class="section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus
+                        quam id fermentum amet amet sit consectetur.</p>
                 </div>
                 <div class="images-container">
                     <div class="left-image-container">
@@ -103,8 +105,29 @@
                     </div>
                 </div>
             </div>
-         </section>
+        </section>
         <!-- Holidays Sale section end -->
+        <!-- Our Awesome Portfolio section start -->
+        <section>
+            <div class="container awesome-portfolio">
+                <div class="section-content">
+                    <h5 class="section-sub-title red">THE BEST GIFTS</h5>
+                    <h2 class="section-title">Our Awesome Portfolio</h2>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                        sodales risus ut pellentesque vel euismod.</p>
+                </div>
+
+            <div class="image-gallery">
+                <div class="item"><img src="./assets/Rectangle 3.png" alt=""></div>
+                <div class="item"><img src="./assets/Rectangle 4.png" alt=""></div>
+                <div class="item"><img src="./assets/Rectangle 5.png" alt=""></div>
+                <div class="item"><img src="./assets/Rectangle 6.png" alt=""></div>
+                <div class="item"><img src="./assets/Rectangle 7.png" alt=""></div>
+                <div class="item"><img src="./assets/Rectangle 8.png" alt=""></div>
+            </div>
+            </div>
+        </section>
+        <!-- Our Awesome Portfolio section end -->
     </main>
     <!-- main end -->
     <!-- footer start -->
