subscribe newsletter section done

--- a/index.html
+++ b/index.html
@@ -128,6 +128,21 @@
             </div>
         </section>
         <!-- Our Awesome Portfolio section end -->
+        <!-- Subscribe Newsletter section start -->
+         <section class="container">
+            <div class="subscribe-newsletter">
+                <div class="section-heading">
+                    <img src="./assets/Group 61.png" alt="">
+                    <h2 class="section-title">Subscribe Newsletter</h2>
+                    <p class="section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <form action="">
+                        <input type="email" name="" id="" placeholder="user@gmail.com">
+                        <input class="red-btn" type="button" value="Subscribe">
+                    </form>
+                </div>
+            </div>
+         </section>
+        <!-- Subscribe Newsletter section end -->
     </main>
     <!-- main end -->
     <!-- footer start -->
