--- a/index.html
+++ b/index.html
@@ -117,37 +117,61 @@
                         sodales risus ut pellentesque vel euismod.</p>
                 </div>
 
-            <div class="image-gallery">
-                <div class="item"><img src="./assets/Rectangle 3.png" alt=""></div>
-                <div class="item"><img src="./assets/Rectangle 4.png" alt=""></div>
-                <div class="item"><img src="./assets/Rectangle 5.png" alt=""></div>
-                <div class="item"><img src="./assets/Rectangle 6.png" alt=""></div>
-                <div class="item"><img src="./assets/Rectangle 7.png" alt=""></div>
-                <div class="item"><img src="./assets/Rectangle 8.png" alt=""></div>
-            </div>
+                <div class="image-gallery">
+                    <div class="item"><img src="./assets/Rectangle 3.png" alt=""></div>
+                    <div class="item"><img src="./assets/Rectangle 4.png" alt=""></div>
+                    <div class="item"><img src="./assets/Rectangle 5.png" alt=""></div>
+                    <div class="item"><img src="./assets/Rectangle 6.png" alt=""></div>
+                    <div class="item"><img src="./assets/Rectangle 7.png" alt=""></div>
+                    <div class="item"><img src="./assets/Rectangle 8.png" alt=""></div>
+                </div>
             </div>
         </section>
         <!-- Our Awesome Portfolio section end -->
         <!-- Subscribe Newsletter section start -->
-         <section class="container">
+        <section class="container">
             <div class="subscribe-newsletter">
                 <div class="section-heading">
                     <img src="./assets/Group 61.png" alt="">
                     <h2 class="section-title">Subscribe Newsletter</h2>
-                    <p class="section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <p class="section-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                     <form action="">
                         <input type="email" name="" id="" placeholder="user@gmail.com">
                         <input class="red-btn" type="button" value="Subscribe">
                     </form>
                 </div>
             </div>
-         </section>
+        </section>
         <!-- Subscribe Newsletter section end -->
     </main>
     <!-- main end -->
     <!-- footer start -->
     <footer>
-
+        <div class="container footer-section">
+            <div class="flex-style">
+                <div class="address-info">
+                    <p>44, Big Building Roosevelt Street</p>
+                    <p>Beach Gardens Florida 33410</p>
+                </div>
+                <div class="contact-info">
+                    <p>+00 123 584 124</p>
+                    <p>www.website.com</p>
+                </div>
+            </div>
+            <hr>
+            <div class="social-links flex-style">
+                <img src="./assets/Facebook.png" alt="">
+                <img src="./assets/Instagram.png" alt="">
+                <img src="./assets/Twitter.png" alt="">
+                <img src="./assets/Linkedin.png" alt="">
+            </div>
+            <hr>
+            <div class="flex-style">
+                <p>2024, All Rights Reserved</p>
+                <p>Unsubscribe</p>
+            </div>
+        </div>
     </footer>
     <!-- footer end -->
 </body>
