--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>New Year New Mission</title>
     <!-- external css file -->
     <link rel="stylesheet" href="./styels/style.css">
+    <!-- font-awesome cdn link -->
+    <script src="https://kit.fontawesome.com/f3d51a81b3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -155,8 +157,14 @@
                     <p>Beach Gardens Florida 33410</p>
                 </div>
                 <div class="contact-info">
-                    <p>+00 123 584 124</p>
-                    <p>www.website.com</p>
+                    <p>
+                        <i class="fa-solid fa-phone-volume"></i>
+                        +00 123 584 124
+                    </p>
+                    <p>
+                        <i class="fa-solid fa-globe"></i>
+                        www.website.com
+                    </p>
                 </div>
             </div>
             <hr>
